
syntax = "proto3";
package hello;

message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
  repeated int32 number=4;
}

message IntTrans {
     int64 Input1 = 1;
     int64 Input2 = 2;
}

message ResRes{
    int64 IntRes = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse){}
  rpc Add(IntTrans) returns (ResRes){}
}

